--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap');
 
 * {
   margin: 0;
@@ -11,6 +12,9 @@ body,
 input {
   /* position: absolute; */
   font-family: "Poppins", sans-serif;
+}
+li{
+  visibility: none;
 }
 
 .container {
@@ -429,9 +433,3 @@ form.sign-in-form {
     left: 50%;
   }
 }
-
-
-
-
-
-
