--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -371,6 +371,20 @@ text-align: center;
   margin-left: 20px;
 
 }
+.account-link{
+  text-decoration: none;
+  position: absolute;
+  bottom: 10px;
+  margin-right: -5px;
+  color: #000000;
+  right: 0px;
+}
+.link-home{
+  text-decoration: none;
+  background-color: #f5f5f5;
+  width: cover;
+  color: #EF5DA8;
+}
  /* Responsiveness */
  @media only screen and (max-width: 1694px){
     .dashboard{
@@ -382,7 +396,8 @@ text-align: center;
    .mobile-version{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    /* gap: 20px; */
+    justify-content: space-between;
    }
    .desktop-version{
     display: none;
@@ -394,6 +409,7 @@ text-align: center;
     justify-content: space-between;
    }
    .feeling-text{
+    margin-top: 0;
     margin: 20px;
     margin-bottom: 0;
    }
@@ -424,7 +440,7 @@ flex-grow: 0;
    .dash-text{
     position: absolute;
     font-size: 26px;
-    top: 400px;
+    top: 370px;
     margin: 20px;
     margin-bottom: 40px;
 
@@ -432,22 +448,22 @@ flex-grow: 0;
    .mobile-v{
     height: 20%;
     position: absolute;
-    top: 470px;
+    top: 420px;
     left: 20px;
     margin-top: 20px;
    }
    .v2{
     margin-top: 40px;
-    top:720px;
+    top:650px;
    }
    .bottom-nav{
     display: flex;
     justify-content: space-between;
     width: 90%;
-    margin: 20px;
+    /* margin: 20px; */
     margin-right: 25px;
-position: absolute;
-    bottom:10px;
+  position: absolute;
+    bottom:-80px;
     /* Hone Nav */
 
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.9);
