--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -119,6 +119,7 @@ color: #000000;
   margin-top: -10px;
 
 }
+
 .profile-navbar{
   display: flex;
   justify-content: space-between;
@@ -204,8 +205,11 @@ svg{
 }
 
 .grid-item3{
+  display: flex;
+  flex-direction: column;
+  gap:20px;
   background: #FAFAFA;
-
+justify-content: space-between;
   position: absolute;
   left: 1000px;
   background: #FAFAFA;
@@ -239,8 +243,19 @@ border-radius: 20px;
   /* margin:auto */
 }
 
+.personal-1{
+  padding-top: 20px;
+  padding: 10PX;
+  margin: 10px;
+  margin-bottom: 100px;
+}
+
 .anon-p{
+  /* margin-top: 10px; */
   text-align: center;
+}
+.anon-p-desktopp{
+  margin-top: 60px;
 }
 .anon{
   /* Online Resources */
@@ -286,6 +301,12 @@ flex-grow: 0;
 .join-p{
   color: #EF5DA8;
 
+}
+.health-card{
+ display: flex;
+ flex-direction: column;
+ gap: 60px;
+ /* justify-content: space-between; */
 }
 .health-only{
   position: absolute;
@@ -336,12 +357,14 @@ color: #000000;
 text-align: center;
 
 }
-/* .moods{
+
+.moods{
   display: flex;
   position: relative;
-  top:180px;
+  top: -80px;
+  /* top:180px; */
   justify-content: space-between;
-} */
+}
 .MoodTracker{
   position: absolute;
   top:400px;
@@ -371,10 +394,14 @@ text-align: center;
   margin-left: 20px;
 
 }
+Link{
+
+  text-decoration: none;
+}
 .account-link{
   text-decoration: none;
-  position: absolute;
-  bottom: 10px;
+  position: relative;
+  bottom: -5px;
   margin-right: -5px;
   color: #000000;
   right: 0px;
@@ -384,6 +411,10 @@ text-align: center;
   background-color: #f5f5f5;
   width: cover;
   color: #EF5DA8;
+}
+.desktop-version{
+  width: 100vw;
+  height: 100vh;
 }
  /* Responsiveness */
  @media only screen and (max-width: 1694px){
@@ -398,6 +429,7 @@ text-align: center;
     flex-direction: column;
     /* gap: 20px; */
     justify-content: space-between;
+    height: 100%;
    }
    .desktop-version{
     display: none;
@@ -446,6 +478,7 @@ flex-grow: 0;
 
    }
    .mobile-v{
+    width: 90%;
     height: 20%;
     position: absolute;
     top: 420px;
@@ -461,9 +494,9 @@ flex-grow: 0;
     justify-content: space-between;
     width: 90%;
     /* margin: 20px; */
-    margin-right: 25px;
-  position: absolute;
-    bottom:-80px;
+    margin-top: 25px;
+  position: sticky;
+    top:900px;
     /* Hone Nav */
 
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.9);
