--- a/src/Pages/Resources.css
+++ b/src/Pages/Resources.css
@@ -26,6 +26,10 @@ border-radius: 10px;
   margin-bottom: 100px;
 
 }
+.image{
+    margin-top: 20px;
+    width: 20em;
+}
 .videos{
     display: grid;
     margin-top: 40px;
@@ -36,16 +40,16 @@ border-radius: 10px;
   margin-bottom: 100px;
 }
 .image{
-    height: 250px;
-    width: 200px;
+    height: 300px;
+    width: 350px;
 }
 .mental-vid-text{
-    position: absolute;
-width: contain;
+ position: relative;
+width: 300px;
 padding: 10px;
 height: 20px;
-left: 17px;
-bottom: 100px;
+/* left: 17px; */
+bottom: 60px;
 
 background: #D9D9D9;
 border-radius: 10px;
@@ -73,6 +77,10 @@ body{
     position: relative;
     bottom: -18px;
     left: -18px;
+   }
+   .slide-img{
+    height: 400px;
+    width: 500px;
    }
    @media only screen and (max-width: 768px){
     .bottom-nav{
